--- a/index.html
+++ b/index.html
@@ -1,71 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Products Page</title>
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="images/favicon/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="images/favicon/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="images/favicon/favicon-16x16.png"
-    />
-    <link rel="manifest" href="images/favicon/site.webmanifest" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Products Page</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png" />
+  <link rel="manifest" href="images/favicon/site.webmanifest" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+</head>
+
+<body>
+  <!-- criar um login -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-      <h1 class="mb-4 mt-4">Products page</h1>
-      <div class="row mb-5">
-        <div class="col mb-3">
-          <label for="type" class="form-label">Types</label>
-          <select id="type" name="type" class="form-select">
-            <option value="all">All Types</option>
-          </select>
-        </div>
-        <div class="col mb-3">
-          <label for="brand" class="form-label">Brand</label>
-          <select id="brand" name="brand" class="form-select">
-            <option value="all">All Brand</option>
-          </select>
-        </div>
-        <div class="d-grid gap-2">
-          <button class="btn btn-primary" id="filterBtn" onclick="handleFilterBtnClick()">Apply filters</button>
-        </div>
+      <a class="navbar-brand" href="#">Device Store</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#loginModal">Login</a>
+          </li>
+        </ul>
       </div>
-      <div class="row">
-        <div class="col-xs-12">
-          <div class="product-list row">
-            
-            </div>    
-        
+      <span id="userProfile" class="navbar-text">alex.ageev@hotmail.com</span>
+  </nav>
+  <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="loginModalLabel">Login Form</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <form id="loginForm">
+          <div class="modal-body">
+            <div class="mb-3">
+              <label for="email" class="col-form-label">Email:</label>
+              <input type="email" class="form-control" id="email" placeholder="example@domain.pt" required>
+            </div>
+            <div class="mb-3">
+              <label for="password" class="col-form-label">Password:</label>
+              <input type="password" class="form-control" id="password" required>
             </div>
           </div>
-        </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="submit" class="btn btn-primary">Login</button>
+          </div>
+        </form>
       </div>
     </div>
+  </div>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
-    <script src="script.js"></script>
-  </body>
+
+
+
+
+
+
+  <div class="container">
+    <h1 class="mb-4 mt-4">Products page</h1>
+    <div class="row mb-5">
+      <div class="col mb-3">
+        <label for="type" class="form-label">Types</label>
+        <select id="type" name="type" class="form-select">
+          <option value="all">All Types</option>
+        </select>
+      </div>
+      <div class="col mb-3">
+        <label for="brand" class="form-label">Brand</label>
+        <select id="brand" name="brand" class="form-select">
+          <option value="all">All Brand</option>
+        </select>
+      </div>
+      <div class="d-grid gap-2">
+        <button class="btn btn-primary" id="filterBtn" onclick="handleFilterBtnClick()">Apply filters</button>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-12">
+        <div class="product-list row">
+
+        </div>
+
+      </div>
+    </div>
+  </div>
+  </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+  <script src="script.js"></script>
+</body>
+
 </html>
