--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+          <li class="nav-item active" id="loginContainer">
             <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#loginModal">Login</a>
           </li>
         </ul>
       </div>
-      <span id="userProfile" class="navbar-text">alex.ageev@hotmail.com</span>
+      <span id="userProfile" class="navbar-text"></span>
   </nav>
   <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
     <div class="modal-dialog">
